; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/helix/rev2/keymaps/froggy/extr_keymap.c_find_mairix.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/helix/rev2/keymaps/froggy/extr_keymap.c_find_mairix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATRIX_ROWS = common dso_local global i64 0, align 8
@MATRIX_COLS = common dso_local global i64 0, align 8
@keymaps = common dso_local global i32*** null, align 8
@_BASE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @find_mairix(i64 %0, i64* %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64* %1, i64** %6, align 8
  store i64* %2, i64** %7, align 8
  store i64 0, i64* %8, align 8
  br label %10

10:                                               ; preds = %42, %3
  %11 = load i64, i64* %8, align 8
  %12 = load i64, i64* @MATRIX_ROWS, align 8
  %13 = icmp ult i64 %11, %12
  br i1 %13, label %14, label %45

14:                                               ; preds = %10
  store i64 0, i64* %9, align 8
  br label %15

15:                                               ; preds = %38, %14
  %16 = load i64, i64* %9, align 8
  %17 = load i64, i64* @MATRIX_COLS, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %41

19:                                               ; preds = %15
  %20 = load i32***, i32**** @keymaps, align 8
  %21 = load i64, i64* @_BASE, align 8
  %22 = getelementptr inbounds i32**, i32*** %20, i64 %21
  %23 = load i32**, i32*** %22, align 8
  %24 = load i64, i64* %8, align 8
  %25 = getelementptr inbounds i32*, i32** %23, i64 %24
  %26 = load i32*, i32** %25, align 8
  %27 = load i64, i64* %9, align 8
  %28 = getelementptr inbounds i32, i32* %26, i64 %27
  %29 = call i64 @pgm_read_word(i32* %28)
  %30 = load i64, i64* %5, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %37

32:                                               ; preds = %19
  %33 = load i64, i64* %8, align 8
  %34 = load i64*, i64** %6, align 8
  store i64 %33, i64* %34, align 8
  %35 = load i64, i64* %9, align 8
  %36 = load i64*, i64** %7, align 8
  store i64 %35, i64* %36, align 8
  store i32 1, i32* %4, align 4
  br label %46

37:                                               ; preds = %19
  br label %38

38:                                               ; preds = %37
  %39 = load i64, i64* %9, align 8
  %40 = add i64 %39, 1
  store i64 %40, i64* %9, align 8
  br label %15

41:                                               ; preds = %15
  br label %42

42:                                               ; preds = %41
  %43 = load i64, i64* %8, align 8
  %44 = add i64 %43, 1
  store i64 %44, i64* %8, align 8
  br label %10

45:                                               ; preds = %10
  store i32 0, i32* %4, align 4
  br label %46

46:                                               ; preds = %45, %32
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

declare dso_local i64 @pgm_read_word(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
